<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Instalaciones v 1.3</string>
    <string name="MenuID">Id de la instalación:</string>
    <string name="IDInstalacion">ALCAL0</string>
    <string name="MenuReemp">Reemplazo de un punto de la instalación.</string>
    <string name="TerminalNoCompatible">Su terminal no permite el uso de esta aplicación. Póngase en contacto con Sinapse Energía</string>
    <string name="LlamarSoporte">Llamar a Soporte Sinapse</string>
    <string name="EscaneaBalasto">Escanea el código de Balasto.</string>
    <string name="Balasto">BALASTO</string>
    <string name="EscaneaEC">Escanea el código del EasyControl.</string>
    <string name="Easycontrol">EASYCONTROL</string>
    <string name="GPSDesactivado">El GPS esta deshabilitado. ¿Desea activarlo?</string>
    <string name="ActivarGPS">Activar GPS</string>
    <string name="CoordenadasNoOk">No se tienen coordenadas GPS correctas, inténtelo de nuevo</string>
    <string name="ErrorCodigo">Error de código de barras</string>
    <string name="EscaneoNoEC">El dispositivo que esta escaneando no es un EasyControl.</string>
    <string name="VolverEscaner">Volver a escanear</string>
    <string name="ECescaneado">El EasyControl escaneado es </string>
    <string name="EscaneoNoBalasto">El dispositivo que esta escaneando es un EasyControl y debe escanear el balasto.</string>
    <string name="Selecciona">Selecciona:</string>
    <string name="ConCodigo">Con código de barras</string>
    <string name="SinCodigo">Sin código de barras</string>
    <string name="TipoBalasto">Tipo de balasto (con código de barras)</string>
    <string name="BalastoConCodigo">Ha seleccionado el tipo de balasto con código de barras ¿Es correcto?.</string>
    <string name="Si">Sí</string>
    <string name="NoEdito">No, quiero editarlo</string>
    <string name="NoRadioFrancesa">No has introducido un código de radio francesa válido. Debe tener 6 dígitos</string>
    <string name="IDIncorrecta">ID del punto incorrecta</string>
    <string name="NocodigoValido">No has introducido un código para el punto válido.</string>
    <string name="OpcionCorrecto">Debe seleccionar una opción correcta</string>
    <string name="Sustituye">Sustituye a: </string>
    <string name="Resumen">Resumen del punto: </string>
    <string name="TarjetaNoMontada">Tarjeta SD no montada</string>
    <string name="NoESCTarjeta">Imposible escribir en la tarjeta de memoria</string>
    <string name="FicheroNoExiste">El fichero no existia, por lo que se ha creado</string>
    <string name="ErrorFichero">Error cerrando el fichero</string>
    <string name="FTPActualizado">FTP actualizado</string>
    <string name="CreadoEC">He creado el fichero EC</string>
    <string name="NoCreadoEC">No he creado el fichero EC</string>
    <string name="CreadoBalast">He creado el fichero balasto</string>
    <string name="NoCreadoBalast">No he creado el fichero balasto</string>
    <string name="IntroducePunto">Introduce el punto del mapa</string>
    <string name="BalastoSinapse">Selecciona si el balastro es Sinapse (con código de barras) o de otra marca (sin código de barras).</string>
    <string name="TipoBalasto">Selecciona el tipo de balasto: </string>
    <string name="SeleccionaMarca">Selecciona la marca: </string>
    <string name="LocalizacionPunto">Localización del punto:</string>
    <string name="CoordGPS">Obteniendo las coordenadas GPS...</string>
    <string name="Direccion">Dirección:</string>
    <string name="VerMapa">Pulsa aquí para ver mapa</string>
    <string name="EscanearEC">Escanea código de EasyControl</string>
    <string name="AplicacionNombre">Aplicación para la gestión de instalaciones de Sinapse Energía.</string>
    <string name="AddPunto">Añada un nuevo punto a la instalación.</string>
    <string name="Reemplazo">Reemplazo de equipo</string>
    <string name="IntroduceRadio">Introduce el código de la radio antigua sustituida</string>
    <string name="PotenciaTipo">A continuación, selecciona la potencia y el tipo de lámpara</string>
    <string name="Potencia">Potencia: </string>
    <string name="TipoLampara">Tipo de lámpara: </string>
    <string name="Luminaria">Luminaria: </string>
    <string name="IDRadioFrancesa">ID radio francesa</string>
    <string name="OpcionCorrectoPorfavor">Por favor, selecciona una opción correcta</string>
    <string name="CodigoFrancesa">Se ha leido el codigo de una radio francesa </string>
    <string name="CreadoFrancesa">He creado el fichero radios francesas</string>
    <string name="NoCreadoFrancesa">No he creado el fichero radios francesas</string>
	<string name="Nombreaplicacion">Aplicación para la gestión de instalaciones de Sinapse Energía.</string>
	<string name="IntroduceRadioFrancesa">Introduce el código de la radio francesa</string>
	<string name="Marcadorpulsado">Marcador pulsado</string>
	<string name="ClickLargo">Click Largo</string>
	<string name="Click">Click</string>
	
    <string-array name="IMEI">
        <item>352166050946790</item>
        <item>352166050947129</item>
        <item>351870052524031</item>
        <item>357453045179488</item>
        <item>356708049105891</item>
        <item>355430048201040</item>
        <item>351722057666855</item>
        <item>351722057666848</item>
        <item>868017000256524</item>
        <item>359901048046193</item>
        <item>353058053760949</item>
        <item>351722057894366</item>
        <item>353103054932681</item>
        <item>RJ1BB40237J</item>
        <item>353103054932681</item>
        <item>359827047500023</item>
        <item>356508052218551</item>
        <item>357506059252135</item>
        <item>356980050072985</item>
        <item>862741010283501</item>
        <item>862741010283519</item>
        <item>352668040709485</item>
        <item>351830063800705</item>
        <item>358672055333367</item>
        <item>354153068286359</item>
        <item>359608057568450</item>
        <item>359276058618607</item>
        <item>351722057666855</item>
        <item>353922050264124</item>
        <item>355332050045952</item>
        <item>359021044769233</item>  
        <item>354900063658267</item>
        <item>358188054084471</item>
        <item>358392048311574</item>
        <item>358392048311582</item>
    </string-array>
    <string-array name="balastos_array">
        <item>Selecciona: </item>
        <item>Con código de barras</item>
        <item>Sin código de barras</item>
    </string-array>
    <string-array name="potbalast_array">
        <item>Selecciona: </item>
        <item>70</item>
        <item>100</item>
        <item>150</item>
        <item>250</item>
        <item>400</item>
    </string-array>
    <string-array name="potbalast_array2">
        <item>Selecciona: </item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>150</item>
        <item>250</item>
        <item>400</item>
        <item>600</item>
        <item>1000</item>
    </string-array>
    <string-array name="potled_array">
        <item>24</item>
        <item>55</item>
        <item>73</item>
        <item>80</item>
        <item>100</item>
        <item>120</item>
        <item>150</item>
        <item>185</item>
        <item>240</item>
        <item>320</item>
    </string-array>
    <string-array name="lamp_array2">
        <item>Selecciona: </item>
        <item>VSAP</item>
        <item>LED</item>
        <item>HM</item>
        <item>VM</item>
        <item>Fluorescente</item>
        <item>TL5C</item>
        <item>PL-C/T</item>
        <item>PL-L</item>
    </string-array>
    <string-array name="lamp_array">
   		<item>VSAP</item>
        <item>LED</item>
        <item>HM</item>
        <item>VM</item>
    </string-array>
    <string-array name="tipo_array2">
        <item>Selecciona: </item>
        <item>Electrónico</item>
        <item>Ferromagnético</item>
        <item>Driver LED</item>
    </string-array>
    <string-array name="tipo_array">
        <item>Selecciona: </item>
        <item>Electrónico</item>
        <item>Ferromagnético</item>
        <item>Driver LED</item>
    </string-array>
    <string-array name="marcas_array2">
        <item>Selecciona: </item>
        <item>Philips</item>
        <item>Meanwell</item>
        <item>Carandini</item>
        <item>Tridonic</item>
        <item>ELT</item>
        <item>ETI</item>
        <item>HP</item>
        <item>HEP</item>
    </string-array>
    <string-array name="marcas_array">
        <item>Selecciona: </item>
        <item>Philips</item>
        <item>Carandini</item>
        <item>HEP</item>
        <item>BPR</item>
        <item>Meanwell</item>
        <item>Tridonic</item>
        <item>Otro</item>
    </string-array>

</resources>