<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/menu_gps"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/backrepeat"
        android:orientation="vertical"
        android:weightSum="1" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logosinapse" >
        </ImageView>

        <TextView
            android:id="@+id/textGPSTomando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LocalizacionPunto"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" >
        </TextView>
        
    <ImageButton
        android:id="@+id/GPSButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent"
        android:src="@drawable/gps" >
    </ImageButton>

        <TextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CoordGPS"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" >
        </TextView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Direccion"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" >
        </TextView>

        <TextView
            android:id="@+id/myaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/mapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dip"
                android:background="@drawable/maps"
                android:src="@drawable/maps" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/VerMapa" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="fill_parent"
            android:layout_height="5dip"
            android:background="@drawable/mygradient" />

        <TextView
            android:id="@+id/TextoECoBalast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EscanearEC"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" >
        </TextView>

        <ImageButton
            android:id="@+id/scanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/qrbutton"
            android:src="@drawable/qrbutton" >
        </ImageButton>

        <TextView
            android:id="@+id/RefRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="@style/BoldFont" >
        </TextView>

        <TextView
            android:id="@+id/tipoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Easycontrol"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" >
        </TextView>

        <ImageView
            android:id="@+id/imagenproducto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/easycontrol" >
        </ImageView>
    </LinearLayout>

</ScrollView>