<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

    <LinearLayout android:id="@+id/menu_balast"
         android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backrepeat"
    android:orientation="vertical"
    android:weightSum="1">
        
         
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logosinapse"
        android:src="@drawable/logosinapse" >
    </ImageView>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IntroducePunto"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/IDPunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true" />

    <TextView
        android:id="@+id/RFrancesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IntroduceRadioFrancesa"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/IDRadioFrancesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true" >
    </EditText>

    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="5dip"
        android:background="@drawable/mygradient" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BalastoSinapse"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" >
    </TextView>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
    </Spinner>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TipoBalasto"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:visibility="invisible" >
        </TextView>

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" >
        </Spinner>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selecciona la marca: "
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:visibility="invisible" >
        </TextView>

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" >
        </Spinner>
    </LinearLayout>

    <ImageButton
        android:id="@+id/ButtonContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="1dip"
        android:layout_marginRight="1dip"
        android:background="@drawable/continuar"
        android:src="@drawable/continuar"
        android:visibility="invisible" >
    </ImageButton>
  </LinearLayout>

</ScrollView>