<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/menu_ll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/backrepeat"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="1" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logosinapse"
            android:src="@drawable/logosinapse" >
        </ImageView>

        <TextView
            android:id="@+id/IDInstText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MenuID"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" >
        </TextView>

        <TextView
            android:id="@+id/InstalacionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IDInstalacion"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" >
        </TextView>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:orientation="vertical" >

            <View
                android:id="@+id/View02"
                android:layout_width="fill_parent"
                android:layout_height="5dip"
                android:background="@drawable/mygradient" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Introduce el cuadro:"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:visibility="invisible" >
            </TextView>

            <EditText
                android:id="@+id/cuadroText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:capitalize="characters"
                android:numeric="integer"
                android:textColor="#000000"
                android:visibility="invisible" >
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Introduce el número de puntos"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" >
            </TextView>

            <EditText
                android:id="@+id/numptosText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:numeric="integer"
                android:visibility="invisible" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="      " />

            <View
                android:id="@+id/divider"
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_weight="1"
                android:background="@drawable/mygradient"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/AplicacionNombre"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="               " />

            <View
                android:id="@+id/View01"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:layout_weight="1"
                android:background="@drawable/mygradient" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="                " />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="Añada un nuevo punto a la instalación."
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <ImageButton
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/transparent"
                android:src="@drawable/anadir" />
        </LinearLayout>

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:text=" "
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:text="Reemplazo de un punto de la instalación."
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />

        <ImageButton
            android:id="@+id/replaceButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/transparent"
            android:src="@drawable/replace" />
    </LinearLayout>

</ScrollView>